tests/ui/panic-handler/panic-handler-with-track-caller.stderr
error: `#[::core::panicking::panic_handler]` is not allowed to have `#[track_caller]`
  --> $DIR/panic-handler-with-track-caller.rs:10:1
   |
LL | #[panic_handler]
   | ---------------- `#[::core::panicking::panic_handler]` is not allowed to have `#[track_caller]`
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

